--- a/main.html
+++ b/main.html
@@ -32,16 +32,16 @@
          <div class="col-md-2 register-nav"><button id="register-btn" type="button" class="btn btn-dark register-nav-btn">Register</button></div>
       </div>
       <div class="row justify-content-center">
-         <div class="login-content col-sm-4 content">
+         <div class="login-content col-md-4 content">
             <br />
             <div class="row">
                <div id="icon" class="col-md-3"><i class="fas fa-user"></i></div>
-               <div class="col-sm-7"><input id="username-input" class="input-group-login mb-2" type="text" placeholder="Username" /></div>
+               <div class="col-md-7"><input id="username-input" class="input-group-login mb-2" type="text" placeholder="Username" /></div>
             </div>
 
             <div class="row">
                <div id="icon" class="col-md-3"><i class="fas fa-unlock-alt"></i></div>
-               <div class="col-sm-7"><input id="password-input" class="input-group-login mb-2" type="password" placeholder="Password" /></div>
+               <div class="col-md-7"><input id="password-input" class="input-group-login mb-2" type="password" placeholder="Password" /></div>
             </div>
 
             <br />
@@ -52,32 +52,32 @@
             <div id="login-error"></div>
             <br />
          </div>
-         <div class="col-sm-4 content register-content">
+         <div class="col-md-4 content register-content">
             <br />
             <div class="row">
                <div id="icon" class="col-md-3"><i class="fas fa-signature"></i></div>
-               <div class="col-sm-7"><input id="name" class="input-group mb-2" type="text" placeholder="Enter your name" /></div>
+               <div class="col-md-7"><input id="name" class="input-group mb-2" type="text" placeholder="Enter your name" /></div>
             </div>
             <div class="row">
                <div id="icon" class="col-md-3"></div>
-               <div class="col-sm-7"><input id="surname" class="input-group mb-2" type="text" placeholder="Enter your surname" /></div>
+               <div class="col-md-7"><input id="surname" class="input-group mb-2" type="text" placeholder="Enter your surname" /></div>
             </div>
             <div class="row">
                <div id="icon" class="col-md-3"><i class="fas fa-at"></i></div>
-               <div class="col-sm-7"><input id="email" class="input-group mb-2" type="text" placeholder="Enter your email" /></div>
+               <div class="col-md-7"><input id="email" class="input-group mb-2" type="text" placeholder="Enter your email" /></div>
             </div>
             <div class="row">
                <div id="icon" class="col-md-3"><i class="fas fa-user"></i></div>
-               <div class="col-sm-7"><input id="new-username" class="input-group mb-2" type="text" placeholder="Enter a username" /></div>
+               <div class="col-md-7"><input id="new-username" class="input-group mb-2" type="text" placeholder="Enter a username" /></div>
             </div>
             <div class="row">
                <div id="icon" class="col-md-3"><i class="fas fa-key-skeleton"></i></div>
-               <div class="col-sm-7"><input id="new-password" class="input-group mb-2" type="password" placeholder="Enter a password" /></div>
+               <div class="col-md-7"><input id="new-password" class="input-group mb-2" type="password" placeholder="Enter a password" /></div>
             </div>
 
             <div class="row">
                <div id="icon" class="col-md-3"><i class="fas fa-address-card"></i></div>
-               <div class="col-sm-7">
+               <div class="col-md-7">
                   <div class="dropdown input-group">
                      <div id="position"></div>
                      <div id="chooser">Position <i class="fas fa-caret-down"></i></div>
@@ -95,7 +95,7 @@
                <div class="col-md-8"><button type="button" class="btn btn-dark real-register">Register</button></div>
             </div>
             <br />
-            <div id="registration-error" class="col-sm-7"></div>
+            <div id="registration-error" class="col-md-7"></div>
             <br />
          </div>
       </div>
